api fix